Se hizo el hola mundo 2

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ejemplo1</h1>
-    <p>Hola mundo</p>
+    <h1>Ejemplo2</h1>
+    <p>Hola mundo segundo ejemplo</p>
 </body>
 </html>
